# xfce4-networkmanager-plugin

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  meson.build  meson_options.txt
data/: meson.build  xfce4-networkmanager-plugin.desktop.in
data/ui/: popup-window.ui
lib/: meson.build  nm-connection.c  nm-connection.h  nm-device.c  nm-device.h
lib/connection-types/: bluetooth.c  bluetooth.h  ethernet.c  ethernet.h  mobile.c  mobile.h  vpn.c  vpn.h  wifi.c  wifi.h
panel-plugin/: connection-editor.c  connection-editor.h  main.c  meson.build  nm-interface.c  nm-interface.h  notification.c  notification.h  password-dialog.c  password-dialog.h  plugin.c  plugin.h  popup-window.c  popup-window.h  settings-dialog.c  settings-dialog.h  status-icon.c  status-icon.h  style.css  utils.c  utils.h
po/: LINGUAS  POTFILES.in  de.po  en.po  es.po  fr.po  it.po  ja.po  meson.build  pl.po  pt_BR.po  ru.po  zh_CN.po
tests/: meson.build  test-nm-interface.c
