i18n = import('i18n')

i18n.gettext('xfce4-networkmanager-plugin',
  args: [
    '--from-code=UTF-8',
    '--add-comments',
    '--keyword=_',
    '--keyword=N_',
    '--keyword=C_:1c,2',
    '--keyword=NC_:1c,2',
    '--keyword=g_dngettext:2,3',
    '--keyword=Name',
    '--keyword=Comment',
  ]
)
